clusters/corpus/core-system/storage/duplicacy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duplicacy
  namespace: storage
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 256m
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: ${cloudflared_tunnel_uuid}.cfargotunnel.com
    nginx.ingress.kubernetes.io/auth-url: "http://duplicacy-oauth2-proxy.storage.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "backup.${personal_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: duplicacy
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duplicacy-oauth2-proxy
  namespace: storage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - &host "backup.${personal_domain}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: duplicacy-oauth2-proxy
                port:
                  number: 80
